fix(DataGrid): close icon alignment fix

--- a/packages/cloud-cognitive/src/components/Datagrid/styles/addons/_CustomizeColumnsModal.scss
+++ b/packages/cloud-cognitive/src/components/Datagrid/styles/addons/_CustomizeColumnsModal.scss
@@ -43,6 +43,16 @@
   margin-left: $spacing-05;
 }
 
+.#{$block-class}__customize-columns-modal--actions
+  input[role='searchbox']
+  ~ button {
+  height: $spacing-09;
+  width: $spacing-09;
+  &:hover {
+    border-bottom: none;
+  }
+}
+
 .#{$block-class}__customize-columns-instructions {
   padding-left: $spacing-05;
   margin-bottom: $spacing-06;
